# whisper-tray

./: .codex  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  GITHUB_ACTIONS_GUIDE.md  QWEN.md  README.md  pyproject.toml  trigger-windows-build.sh
.claude/: settings.json
.github/workflows/: build-windows.yml  ci.yml
.qwen/: settings.json  skills.json
artifacts/: overlay-ui-mock-soft-stack.html  overlay-ui-ready-card-zoom.html
docs/: CONTRIBUTING.md  DEPLOYMENT.md
docs/plans/: core.md  whisper-tray-implementation-plan.md
packaging/windows/: whisper_tray.spec
plans/: 2026-04-10-0132-overlay.md  2026-04-10-2151-module-decomposition.md  2026-04-10-2342-project-wide-decomposition.md  2026-04-11-0023-aggressive-core-platform-split.md  cpu-first-cross-platform-transcription-prompt.md  macos-m1-support.md  overlay-followup-fixes-plan.md  overlay-ui-plan.md  tray-icon-processing-state.md
prompts/: CODESTYLE.md
requirements/: legacy-runtime.txt
scripts/: build.bat  build_console.bat  build_debug.bat  check.py  run_debug.bat  validate-build.py
scripts/windows/: build.bat  build_console.bat  build_debug.bat  run_debug.bat  test_tray_icon.bat
tests/: __init__.py  test_app.py  test_audio.py  test_audio_recorder.py  test_audio_transcriber.py  test_clipboard.py  test_clipboard_flow.py  test_clipboard_state.py  test_clipboard_windows_fallbacks.py  test_config.py  test_config_env.py  test_config_model.py  test_config_overlay.py  test_hotkey.py  test_overlay.py  test_state.py  test_state_models.py  test_tray.py
tests/app/: test_tray_integration.py
whisper_tray/: .env.example  BUILD_WINDOWS.md  NO_CUDA_INSTALL.md  QUICK_BUILD.md  __init__.py  __main__.py  app.py  app_actions.py  app_constants.py  app_ui.py  app_workflow.py  build.bat  build.sh  build_console.bat  build_debug.bat  cli.py  clipboard.py  config.py  hook-faster_whisper.py  requirements.txt  run_debug.bat  state.py  state_errors.py  state_formatting.py  state_models.py  state_presentation.py  state_presenter.py  test_tray_icon.bat  test_tray_icon.py  types.py  whisper_tray.py  whisper_tray.spec
whisper_tray/adapters/: __init__.py
whisper_tray/app/: __init__.py  bootstrap.py  lifecycle.py  session.py  ui.py  workflow.py
whisper_tray/audio/: __init__.py  cuda.py  fw_assets.py  model_load.py  recorder.py  transcriber.py  vad.py
whisper_tray/clipboard/: __init__.py  controller.py  core.py  pyautogui_fallback.py  windows.py
(+111 files in other folders)
