[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whisper-tray"
version = "0.1.0"
description = "Windows system tray speech-to-text using faster-whisper"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
  {name = "Developer", email = "dev@example.com"}
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "faster-whisper>=1.0.0",
  "sounddevice>=0.4.6",
  "pynput>=1.7.6",
  "pystray>=0.19.0",
  "Pillow>=10.0.0",
  "pyperclip>=1.8.0",
  "pyautogui>=0.9.50",
  "requests>=2.31.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "black==24.3.0",
  "isort==5.13.2",
  "flake8==7.0.0",
  "mypy==1.9.0",
  "bandit==1.7.8",
  "pre-commit==3.7.0",
  "pytest==8.1.1",
  "pytest-cov==5.0.0",
]

ui = [
  "PySide6>=6.7.0",
]

build = [
  "pyinstaller>=6.15.0",
  "python-dotenv>=1.0.0",
]

[project.scripts]
whisper-tray = "whisper_tray.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["whisper_tray*"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 88
max-complexity = 12
extend-ignore = ["E203", "W503"]
exclude = ["venv", ".venv", "build", "dist", "__pycache__", "*.egg-info"]
per-file-ignores = [
    "tests/*:S101",
    "whisper_tray/whisper_tray.py:E402",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = true
exclude = ["tests", "whisper_tray/test_tray_icon.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=whisper_tray --cov-report=term-missing"

[tool.bandit]
targets = ["whisper_tray"]
exclude_dirs = ["tests", "venv"]
